# square_add_project

./: CMakeLists.txt  README.md  setup.py  test.py
square_add/: bindings.cpp  square_add_cpu.cpp  square_add_cuda.cu
